# AIthello

./: CMakeLists.txt  README.md
src/game/: GameBoard.hpp  GameBoardManager.cpp  GameBoardManager.hpp  GamePlayer.hpp  Othello.cpp  Othello.hpp  Othello.natvis  OthelloSave.cpp  OthelloSave.hpp
src/graphics/: GameView.cpp  GameView.hpp  OthelloUI.hpp
src/main/: gen_main.cpp  graph_main.cpp  main.cpp
src/nl/: NLBackprop.cpp  NLBackprop.h  NLDebug.cpp  NLDebug.h  NLLayer.cpp  NLLayer.h  NLNatvis.natvis  NLNetwork.cpp  NLNetwork.h
src/train/: NLTrainManager.cpp  NLTrainManager.hpp  OthelloTrain.cpp  OthelloTrain.hpp
src/tree/: GameTree.cpp  GameTree.hpp  GameTreeNode.cpp  GameTreeNode.hpp  MinMaxTree.cpp  MinMaxTree.hpp  MiniOthello.cpp  MiniOthello.hpp  PreferTree.cpp  PreferTree.hpp
src/utils/: Benchmark.cpp  Benchmark.hpp  Random.cpp  Random.hpp  StringView.cpp  StringView.hpp  Terminal.cpp  Terminal.hpp
